# MeshWizardry

./: .clangd  .gitignore  CMakeLists.txt  TODO.txt
assets/: chain_chomp_super_mario_bros.glb  tesseract.glb
include/: camera_controller.h  direction.h  dungeon.h  hud_prop.h  input.h  player.h  render.h  ui.h
src/: camera_controller.cpp  direction.cpp  dungeon.cpp  input.cpp  main.cpp  player.cpp  render.cpp  ui.cpp
